include(wheelwalking_controlTaskLib)
ADD_LIBRARY(${WHEELWALKING_CONTROL_TASKLIB_NAME} SHARED 
    ${WHEELWALKING_CONTROL_TASKLIB_SOURCES})
add_dependencies(${WHEELWALKING_CONTROL_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${WHEELWALKING_CONTROL_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${WHEELWALKING_CONTROL_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${WHEELWALKING_CONTROL_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${WHEELWALKING_CONTROL_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${WHEELWALKING_CONTROL_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${WHEELWALKING_CONTROL_TASKLIB_HEADERS}
    DESTINATION include/orocos/wheelwalking_control)

